fixed overflow issues

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -1,6 +1,7 @@
 #ot_main {
 	background-color:$background_color_main;
 	color:$text_color_main;
+	overflow: auto;
 }
 
 #ot_main {
